--- a/Health_Survey.Rmd
+++ b/Health_Survey.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "BRFSS Health Survey"
-author: "Justin Weltz"
-date: "12/16/2017"
+author: "Justin Weltz and Andrew Brown"
+date: "2/5/2018"
 output:
   word_document: default
   pdf_document:
@@ -125,15 +125,23 @@ BRFSS <- BRFSS %>% mutate(new_genhlth = ifelse(genhlth == 9 |
 skim(BRFSS$new_genhlth)
 ```
 
-It seems that general health is pretty evenly distributed around "Good."
+It seems that general health is pretty evenly distributed around "Good." It is also interesting that at least 75% of the population report that they have foo to excellent health.
 
 7) Exercise in Past 30 days (Categorical): Whether or not a participant has exercised in the last 30 days. 
 
-Table
 ```{r, echo= FALSE}
 BRFSS <- BRFSS %>% mutate(new_exercise = ifelse(exerany2 == 7 | exerany2 == 9, NA,exerany2))
+
+```
+
+```{r, echo= FALSE, eval= FALSE}
 table(BRFSS$new_exercise)
 ```
+
+```{r, echo= FALSE, eval= FALSE}
+123860/(361649 + 123860)
+```
+
 It is interesting how many survey participants haven't excercised at all in the last month.
 
 
@@ -155,12 +163,16 @@ This distribution is interesting because most participants haven't completed col
 
 9) Veteran (Categorical): Whether the survery participant is a veteran or not.
 
-Table
 ```{r, echo= FALSE}
 BRFSS <- BRFSS %>% mutate(new_veteran3 = ifelse(veteran3 == 9 | veteran3 == 7, NA,veteran3))
-table(BRFSS$new_veteran3)
 ```
-There are not that many veterans in the population in proportionally. But, I am including it as a relevant variable because I am curious what it's predictive power will be on poor mental health days.
+
+
+```{r, echo= FALSE, eval= FALSE}
+table(BRFSS$new_veteran3)
+63919/(63919+421398)
+```
+There are not that many veterans in the population in proportionally (13.17% of the populaion). But, I am including it as a relevant variable because I am curious what it's predictive power will be on poor mental health days.
 
 Comparison of Averages
 
@@ -170,16 +182,8 @@ BRFSS %>% group_by(new_veteran3) %>% summarise(poor_mental_health_days = mean(ne
 
 This is interesting because the averages do not demonstrate what I though I would observe. Instead of the veterans having higher average poor mental health days than non-veterans, the table above demostrates the opposite trend. It will be interesting to look more closely at why this might be.
 
-10) Income Level (Categorical): An income variable with 8 categories
+10) Income Level (Categorical): An income variable with 8 categories ranging from less then 10,000 to 75,000 or more.
 
-1- Less than $10,000
-2- Less than 15,000 (10,000 to less than 15,000) Notes: If "no," code 03; if "yes," ask
-3- Less than 20,000 (15,000 to less than 20,000) Notes: If "no," code 04; if "yes," ask
-4- Less than 25,000 (20,000 to less than 25,000) Notes: If "no," ask 05; if "yes," ask 
-5- Less than 35,000 (25,000 to less than 35,000) Notes: If "no," ask 06
-6- Less than 50,000 (35,000 to less than 50,000) Notes: If "no," ask 07
-7- Less than 75,000 (50,000 to less than 75,000) Notes: If "no," code 08
-8- $75,000 or more
 ```{r, echo= FALSE }
 BRFSS <- BRFSS %>% mutate(new_income = ifelse(income2 == 99 | income2 == 77, NA, income2))
 skim(BRFSS$new_income)
