--- a/MLR.Rmd
+++ b/MLR.Rmd
@@ -186,7 +186,6 @@ plotModel(lm(new_menthlth ~ new_sex, data = BRFSS))
 
 
 
-### ANDREW STARTS HERE
 
 ### F-test
 
@@ -194,14 +193,19 @@ plotModel(lm(new_menthlth ~ new_sex, data = BRFSS))
 brfssModNoInt <- lm(new_menthlth ~ new_genhlth + new_sex + new_veteran3 + new_sleptim1 + new_avedrnk2, data = BRFSS)
 anova(brfssMod, brfssModNoInt)
 ```
-
+From this F-test, we can see that at least one of the interaction terms is nonzero, indicating that ......
 
 ### $R^2$ Values
 
-
+```{r}
+summary(brfssMod)
+```
+While all variables are significant, our overall model is not that precise, as we have a $R^2$ Value of 0.1099, and an Adjusted-$R^2$ Value of 0.1098.
+......
 
 ### Residuals
 
+From the residual plot that was given earlier, it was evident 
 
 ##Variable Scatter Plots
 
@@ -219,8 +223,34 @@ which.min(col.best.sum$cp)
 which.max(col.best.sum$adjr2)
 which.min(col.best.sum$bic)
 ```
-
-
+```{r}
+add1(lm(new_menthlth~1, data=BRFSS), new_menthlth ~ new_genhlth + new_sex + new_veteran3 + new_sleptim1 + new_avedrnk2 + new_sex*new_avedrnk2 + new_sex*new_veteran3 + new_veteran3*new_avedrnk2, test = "F")
+```
+```{r}
+add1(lm(new_menthlth~new_genhlth, data=BRFSS), new_menthlth ~ new_genhlth + new_sex + new_veteran3 + new_sleptim1 + new_avedrnk2 + new_sex*new_avedrnk2 + new_sex*new_veteran3 + new_veteran3*new_avedrnk2, test = "F")
+```
+```{r}
+add1(lm(new_menthlth~new_genhlth + new_sleptim1, data=BRFSS), new_menthlth ~ new_genhlth + new_sex + new_veteran3 + new_sleptim1 + new_avedrnk2 + new_sex*new_avedrnk2 + new_sex*new_veteran3 + new_veteran3*new_avedrnk2, test = "F")
+```
+```{r}
+add1(lm(new_menthlth~new_genhlth + new_sleptim1 + new_sex, data=BRFSS), new_menthlth ~ new_genhlth + new_sex + new_veteran3 + new_sleptim1 + new_avedrnk2 + new_sex*new_avedrnk2 + new_sex*new_veteran3 + new_veteran3*new_avedrnk2, test = "F")
+```
+```{r}
+add1(lm(new_menthlth~new_genhlth + new_sleptim1 + new_sex + new_avedrnk2, data=BRFSS), new_menthlth ~ new_genhlth + new_sex + new_veteran3 + new_sleptim1 + new_avedrnk2 + new_sex*new_avedrnk2 + new_sex*new_veteran3 + new_veteran3*new_avedrnk2, test = "F")
+```
+```{r}
+add1(lm(new_menthlth~new_genhlth + new_sleptim1 + new_sex + new_avedrnk2 + new_sex*new_avedrnk2, data=BRFSS), new_menthlth ~ new_genhlth + new_sex + new_veteran3 + new_sleptim1 + new_avedrnk2 + new_sex*new_avedrnk2 + new_sex*new_veteran3 + new_veteran3*new_avedrnk2, test = "F")
+```
+```{r}
+add1(lm(new_menthlth~new_genhlth + new_sleptim1 + new_sex + new_avedrnk2 + new_sex*new_avedrnk2 + new_veteran3, data=BRFSS), new_menthlth ~ new_genhlth + new_sex + new_veteran3 + new_sleptim1 + new_avedrnk2 + new_sex*new_avedrnk2 + new_sex*new_veteran3 + new_veteran3*new_avedrnk2, test = "F")
+```
+```{r}
+add1(lm(new_menthlth~new_genhlth + new_sleptim1 + new_sex + new_avedrnk2 + new_sex*new_avedrnk2 + new_veteran3 + new_sex*new_veteran3, data=BRFSS), new_menthlth ~ new_genhlth + new_sex + new_veteran3 + new_sleptim1 + new_avedrnk2 + new_sex*new_avedrnk2 + new_sex*new_veteran3 + new_veteran3*new_avedrnk2, test = "F")
+```
+```{r}
+add1(lm(new_menthlth~new_genhlth + new_sleptim1 + new_sex + new_avedrnk2 + new_sex*new_avedrnk2 + new_veteran3 + new_sex*new_veteran3 + new_veteran3*new_avedrnk2, data=BRFSS), new_menthlth ~ new_genhlth + new_sex + new_veteran3 + new_sleptim1 + new_avedrnk2 + new_sex*new_avedrnk2 + new_sex*new_veteran3 + new_veteran3*new_avedrnk2, test = "F")
+```
+Through forward selection, we end up with the same variables in the model as we had before. But does this make sense? And why did different variables show up??
 
 ### Model Interpretation
 
@@ -230,11 +260,11 @@ which.min(col.best.sum$bic)
 
 
 ```{r}
-predict.lm(brfssMod, newdata =  data.frame(new_menthlth = 5), interval = "confidence")
+#predict.lm(brfssMod, newdata =  data.frame(new_menthlth = 5), interval = "confidence")
 ```
 
 ```{r}
-predict.lm(brfssMod, newdata =  data.frame(new_menthlth = 5), interval = "predict")
+#predict.lm(brfssMod, newdata =  data.frame(new_menthlth = 5), interval = "predict")
 ```
 
 
