--- a/MLR.Rmd
+++ b/MLR.Rmd
@@ -317,7 +317,7 @@ new_genhlth: 986124/286456 = 3.442497
 How does this make sense??
 
 new_sex: 88080/1184500 = 0.07436049
-7.44% of the variation in days of poor mental health is due to sex being added to the model.
+7.44% of the variation in days of poor mental health is reduced due to sex being added to the model.
 Is this the correct way to interpret this??
 
 new_veteran3: 8228/1264352 = 0.006507681
